Fixing issue with navigation buttons overlapping
Also Making site more responsive

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -13,6 +13,10 @@ body {
           box-sizing: border-box;
 }
 
+img {
+  max-width: 100%;
+}
+
 p {
   margin: 1em 0;
 }
@@ -64,7 +68,7 @@ a:active {
 #menu a {
   color: #8F8F8F;
   display: inline-block;
-  padding: .3em 1em;
+  padding: .5em 1em;
   text-shadow: 0 1px 0 #EDEDED;
   text-decoration: none;
 }
@@ -238,6 +242,14 @@ a.nav {
           transition: all 0.1s ease-out;  /* Firefox 16+, Opera 12.50+ */
 }
 
+a.nav.prev {
+    margin-left: 0;
+}
+
+a.nav.next {
+    margin-right: 0;
+}
+
 a.nav:hover {
   background-color: #c63b6f;
 }
@@ -272,9 +284,8 @@ footer {
   margin: 0 0 1em;
 }
 
-
-
 @media screen and (min-width:601px) {
+
   #menu {
     position: absolute;
     top: -16px;
@@ -297,4 +308,25 @@ footer {
     display: block;
     padding: .2em 0;
   }
+
+}
+
+@media screen and (max-width:600px) {
+
+  #logo img {
+    width: 15%;
+  }
+
+}
+
+@media screen and (max-width:404px) { 
+
+  a.nav {
+    width: 40%;
+  }
+
+  h1, #logo span {
+    font-size: 1.5em;
+  }
+
 }
